--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="root">
     <div class="screenResult">
-        <span id="screen"></span>
+        <span id="screen">0</span>
         <span id="screenHistory"></span>
     </div>
 
