--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <div class="buttons" id="Buttons">
         <button class="button funct">%</button>
-        <button class="button funct" id="globalClear">CE</button>
-        <button class="button funct" id="clear">C</button>
+        <button class="button funct" id="clear">CE</button>
+        <button class="button funct" id="globalClear">C</button>
         <button class="button funct" id="backspace"><-</button>
         <button class="button funct">1/x</button>
         <button class="button funct">x^2</button>
@@ -35,10 +35,10 @@
         <button class="button funct">+</button>
         <button class="button num">+/-</button>
         <button class="button num">0</button>
-        <button class="button num">,</button>
+        <button class="button num">.</button>
         <button class="button funct" id="result">=</button>
     </div>
 </div>
-<script src="index.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
